--- a/wibe-project/package.json
+++ b/wibe-project/package.json
@@ -12,11 +12,14 @@
     "@supabase/auth-helpers-nextjs": "^0.15.0",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.89.0",
+    "@types/leaflet": "^1.9.21",
     "html-to-image": "^1.11.13",
+    "leaflet": "^1.9.4",
     "next": "16.1.1",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
-    "react-dom": "19.2.3"
+    "react-dom": "19.2.3",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
