--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,2 @@
-import { createBrowserClient } from '@supabase/ssr'
-
-export const supabase = createBrowserClient(
-  process.env.NEXT_PUBLIC_SUPABASE_URL!,
-  process.env.NEXT_PUBLIC_SUPABASE_ANON_KEY!
-)
+NEXT_PUBLIC_SUPABASE_URL=https://vwjrcrccvhtkvgbncmnc.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=sb_publishable_NmckJMIfxdsqvYmI8TTkGA_xThZ31oa
